# Mangals_single_page

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  logging-config.yaml  promtail-config.yml  pyproject.toml  requirements.txt
mangals/: db.json  manage.py
mangals/api/mangals_index/: apps.py
mangals/frontend/: urls.py
mangals/frontend/templates/frontend/: base.html  index.html
mangals/home_page/: admin.py  apps.py  forms.py  models.py  serializers.py  signals.py  urls.py  utils.py  validators.py  views.py
mangals/home_page/migrations/: 0001_initial.py  0002_alter_data_options_data_tel.py  0003_examplesofworks.py  0004_product_alter_examplesofworks_options_mainimgproduct_and_more.py  0005_alter_examplesofworks_options_alter_product_options_and_more.py  0006_imgproduct_alt_mainimgproduct_alt.py  0007_alter_imgproduct_options_and_more.py  0008_message.py  0009_message_created_at_alter_message_tel.py  0010_alter_message_created_at.py  0011_alter_message_options.py  0012_alter_message_tel.py  0013_alter_message_tel.py  0014_alter_message_email_alter_message_message_and_more.py  0015_alter_message_email_alter_message_message_and_more.py  0016_alter_message_tel.py  0017_data_about_us.py  0018_alter_imgproduct_product.py  0019_alter_imgproduct_product.py
mangals/home_page/templates/home_page/: base.html  index.html
mangals/logs/: positions.yaml
mangals/mangals/: asgi.py  settings.py  urls.py  utils.py  views.py  wsgi.py
mangals/static/home_page/css/: fonts.css  style.css
mangals/static/home_page/scripts/: mask_for_tel.js  (+1 more)
(+13 files in other folders)
